test: add tests for alternative code units in UsagePromptBuilderJavaTest